--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -1,34 +1,85 @@
-{**
- * My Application layout template.
- *
- * @param string   $basePath web base path
- * @param string   $robots   tell robots how to index the content of a page (optional)
- * @param array    $flashes  flash messages
- *}
-
 <!DOCTYPE html>
-<html>
-<head>
-	<meta charset="UTF-8">
-	<meta name="description" content="Nette Framework web application skeleton">
-	<meta name="robots" content="{$robots}" n:ifset="$robots">
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<title>{block title|striptags|upper}Nette Application Skeleton{/block}</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="">
+		<meta name="author" content="">
 
-	<title>{block title|striptags|upper}Nette Application Skeleton{/block}</title>
+		{* jQuery *}
+		<script src="{$basePath}/jquery/js/jquery-1.8.3.min.js"></script>
+		<script src="{$basePath}/js/netteForms.js"></script>
 
-	<link rel="stylesheet" media="screen,projection,tv" href="{$basePath}/css/screen.css">
-	<link rel="stylesheet" media="print" href="{$basePath}/css/print.css">
-	<link rel="shortcut icon" href="{$basePath}/favicon.ico">
+		{* bootstrap *}
+		<link href="{$basePath}/bootstrap/css/bootstrap.css" rel="stylesheet">
+		<link href="{$basePath}/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+		<script src="{$basePath}/bootstrap/js/bootstrap.min.js"></script>
 
-	<script src="http://code.jquery.com/jquery-1.8.1.min.js"></script>
-	<script src="{$basePath}/js/netteForms.js"></script>
-	{block head}{/block}
-</head>
+		<style type="text/css">
+			body {
+				padding-top: 60px;
+				padding-bottom: 40px;
+			}
+		</style>
+		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 
-<body>
-	<script> document.body.className+=' js' </script>
+		{block head}{/block}
+	</head>
 
-	<div n:foreach="$flashes as $flash" class="flash {$flash->type}">{$flash->message}</div>
+	<body>
+		<div class="navbar navbar-inverse navbar-fixed-top">
+			<div class="navbar-inner">
+				<div class="container">
+					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</a>
+					<a class="brand" href="#">Project name</a>
+					<div class="nav-collapse collapse">
+						<ul class="nav">
+							<li class="active"><a href="#">Home</a></li>
+							<li><a href="#about">About</a></li>
+							<li><a href="#contact">Contact</a></li>
+							<li class="dropdown">
+								<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+								<ul class="dropdown-menu">
+									<li><a href="#">Action</a></li>
+									<li><a href="#">Another action</a></li>
+									<li><a href="#">Something else here</a></li>
+									<li class="divider"></li>
+									<li class="nav-header">Nav header</li>
+									<li><a href="#">Separated link</a></li>
+									<li><a href="#">One more separated link</a></li>
+								</ul>
+							</li>
+						</ul>
+						<form class="navbar-form pull-right">
+							<input class="span2" type="text" placeholder="Email">
+							<input class="span2" type="password" placeholder="Password">
+							<button type="submit" class="btn">Sign in</button>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
 
-	{include #content}
-</body>
+		<div class="container">
+
+			<div class="row">
+				<div class="span12">
+					<div n:foreach="$flashes as $flash" class="flash {$flash->type}">{$flash->message}</div>
+					{include #content}
+				</div>
+			</div>
+
+			<hr>
+
+			<footer>
+				<p>&copy; Company 2012</p>
+			</footer>
+
+		</div>
+	</body>
 </html>
