Základní implementace login formuláře.

--- a/app/templates/Homepage/default.latte
+++ b/app/templates/Homepage/default.latte
@@ -3,6 +3,8 @@
 {block content}
 <h1 n:block=title>Congratulations!</h1>
 
+	{control login}
+
 	<h2>You have successfully created your Nette Framework project.</h2>
 
 	<div class="box">
