--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -55,11 +55,7 @@
 								</ul>
 							</li>
 						</ul>
-						<form class="navbar-form pull-right">
-							<input class="span2" type="text" placeholder="Email">
-							<input class="span2" type="password" placeholder="Password">
-							<button type="submit" class="btn">Sign in</button>
-						</form>
+						{control login}
 					</div>
 				</div>
 			</div>
