--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -8,7 +8,7 @@
 		<meta name="author" content="">
 
 		{* jQuery *}
-		<script src="{$basePath}/jquery/js/jquery-1.8.3.min.js"></script>
+		<script src="{$basePath}/jquery/js/jquery-1.8.3.js"></script>
 		<script src="{$basePath}/js/netteForms.js"></script>
 
 		{* bootstrap *}
@@ -31,11 +31,6 @@
 		<div class="navbar navbar-inverse navbar-fixed-top">
 			<div class="navbar-inner">
 				<div class="container">
-					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</a>
 					<a class="brand" href="#">Project name</a>
 					<div class="nav-collapse collapse">
 						<ul class="nav">
