--- a/app/components/LoginControl.latte
+++ b/app/components/LoginControl.latte
@@ -2,7 +2,7 @@
 
 	<ul class="nav pull-right">
 		<li class="dropdown">
-			<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="icon-user icon-white"></span> {$user->identity->id} <b class="caret"></b></a>
+			<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="icon-user icon-white"></span> {$user->identity->name} <b class="caret"></b></a>
 			<ul class="dropdown-menu">
 				<li class="nav-header">Actions</li>
 				<li><a n:href="logout!"><i class="icon-off"></i> Log out</a></li>
